--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "baasbox",
-  "version": "0.9.5",
+  "version": "0.11.0",
   "description": "Javascript SDK for the BaasBox back end.",
   "main": "baasbox.js",
   "files": [
     "baasbox.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint ./baasbox.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,13 @@
   "bugs": {
     "url": "https://github.com/zlls/baasbox-js-npm-package/issues"
   },
-  "homepage": "https://github.com/zlls/baasbox-js-npm-package#readme"
+  "homepage": "https://github.com/zlls/baasbox-js-npm-package#readme",
+  "dependencies": {
+    "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.3.0"
+  }
 }
